fix: setting a working version